--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">What\'s For Dinner?</string>
 </resources>
