--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_recipe">Recipe...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_recipe_not_saved">Recipe not saved because it is empty</string>
 </resources>
