--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="label_picture">Picture</string>
     <string name="add_recipe">Add A New Recipe</string>
     <string name="edit_recipe">Edit Recipe</string>
+    <string name="title_activity_categories_list">CategoriesListActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="label_category_name">Category Name</string>
 
 </resources>
