--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="title_activity_categories_list">CategoriesListActivity</string>
     <string name="action_settings">Settings</string>
     <string name="label_category_name">Category Name</string>
+    <string name="label_image">Image</string>
+    <string name="label_categories">Categories</string>
 
 </resources>
